--- a/SpeedifyCliWrapper/SpeedifyCliWrapper.nuspec
+++ b/SpeedifyCliWrapper/SpeedifyCliWrapper.nuspec
@@ -17,5 +17,9 @@
         <releaseNotes>Automated Build</releaseNotes>
         <copyright>Copyright 2019</copyright>
         <tags>Speedify Wrapper CLI</tags>
+        <dependencies>
+            <dependency id="JetBrains.Annotations" version="2019.1.3"  />
+            <dependency id="Newtonsoft.Json" version="12.0.2" />
+        </dependencies>
     </metadata>
 </package>
