--- a/SpeedifyCliWrapper/SpeedifyCliWrapper.csproj
+++ b/SpeedifyCliWrapper/SpeedifyCliWrapper.csproj
@@ -4,11 +4,15 @@
     <TargetFrameworks>netstandard2.0;net462;net45</TargetFrameworks>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.11-pre</Version>
-    <AssemblyVersion>1.0.11.0</AssemblyVersion>
-    <FileVersion>1.0.11.0</FileVersion>
+    <Version>1.0.12-pre</Version>
+    <AssemblyVersion>1.0.12.0</AssemblyVersion>
+    <FileVersion>1.0.12.0</FileVersion>
     <PackageReleaseNotes>Created and added the first methods of the Adapter module, allowing to change adapter properties.
-Still needs to be tested</PackageReleaseNotes>
+Still needs to be tested.
+
+The reading from the CLI is now more robust for most calls (data is not flushed after each write, so the library needs to wait for all the data to be flushed)
+
+Prepared all the returned objects to be compatible with (extension) methods allowing to update them in Speedify as soon as they are updated in C#</PackageReleaseNotes>
     <Authors>Antoine-Ali Zarrouk</Authors>
     <Company />
   </PropertyGroup>
