--- a/SpeedifyCliWrapper/SpeedifyCliWrapper.csproj
+++ b/SpeedifyCliWrapper/SpeedifyCliWrapper.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>1.0.14-pre</Version>
@@ -12,6 +12,7 @@
 Added a method to control the encryption</PackageReleaseNotes>
     <Authors>Antoine-Ali Zarrouk</Authors>
     <Company />
+    <Configurations>Debug;Release;Gen_Debug</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +26,7 @@ Added a method to control the encryption</PackageReleaseNotes>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <ProjectReference Include="..\SpeedifyCliWrapper.SourceGenerators\SpeedifyCliWrapper.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
   <ItemGroup>
